Documentation edits made through Mintlify web editor

--- a/docs/petro/commander/intro.mdx
+++ b/docs/petro/commander/intro.mdx
@@ -8,7 +8,7 @@ description: 'Description of your new file.'
 
 ### Petro Ecosystem
 <div style={{ textAlign: "center" }}>
-  <img src="/img/petro/cmdr/image_36_8.png" alt="Locale Dropdown" width="700" />
+  <img src="./img/image_36_8.png" alt="Locale Dropdown" width="700" />
 </div>
 
 # Using This User Reference
